# microsoftexchangeonpremews

./: .gitmodules  .pre-commit-config.yaml  NOTICE  README.md  __init__.py  display_email.html  display_resolve_names.html  ews_soap.py  ewsexchange.json  ewsonprem.json  ewsonprem.postman_collection.json  ewsonprem_connector.py  ewsonprem_consts.py  ewsonprem_view.py  exclude_files.txt  manual_readme_content.md  process_email.py  pyproject.toml  readme.html  readme.md  request_handler.py  requirements.txt  update_email.html
release_notes/: 1.0.110.md  1.0.119.md  1.0.127.md  1.0.131.md  1.0.135.md  1.0.137.md  1.0.19.md  1.0.46.md  1.0.47.md  1.0.57.md  1.0.84.md  1.0.96.md  2.0.17.md  2.0.29.md  3.0.3.md  3.1.4.md  3.10.0.md  3.11.0.md  3.11.1.md  3.12.0.md  3.13.1.md  3.13.3.md  3.13.6.md  3.14.0.md  3.2.3.md  3.3.3.md  3.4.3.md  3.5.6.md  3.6.2.md  3.7.11.md  3.7.6.md  3.7.7.md  3.7.8.md  3.7.9.md  3.8.0.md  3.9.0.md  4.0.0.md  4.0.1.md  release_notes.html  unreleased.md
src/: __init__.py  app.py  consts.py  ews_soap.py  helper.py
src/actions/: __init__.py  copy_email.py  delete_email.py  expand_dl.py  get_email.py  make_request.py  move_email.py  resolve_name.py  run_query.py  update_email.py
templates/: display_email.html  display_resolve_names.html  update_email.html
wheels/: ordereddict-1.1-py3-none-any.whl
wheels/py3/: pyspnego-0.9.0-py3-none-any.whl
wheels/py313/: cffi-1.17.1-cp313-cp313-manylinux2014_x86_64.manylinux_2_17_x86_64.manylinux_2_28_x86_64.whl  cffi-2.0.0-cp313-cp313-manylinux2014_x86_64.manylinux_2_17_x86_64.manylinux_2_28_x86_64.whl
wheels/py36/: cryptography-40.0.2-cp36-abi3-manylinux_2_17_x86_64.manylinux2014_x86_64.whl
wheels/py39/: cffi-1.15.1-cp39-cp39-manylinux_2_17_x86_64.manylinux2014_x86_64.whl  cffi-1.16.0-cp39-cp39-manylinux_2_17_x86_64.manylinux2014_x86_64.whl  cffi-1.17.0-cp39-cp39-manylinux2014_x86_64.manylinux_2_17_x86_64.whl  cffi-1.17.1-cp39-cp39-manylinux2014_x86_64.manylinux_2_17_x86_64.manylinux_2_28_x86_64.whl  cffi-2.0.0-cp39-cp39-manylinux2014_x86_64.manylinux_2_17_x86_64.manylinux_2_28_x86_64.whl  charset_normalizer-3.1.0-cp39-cp39-manylinux_2_17_x86_64.manylinux2014_x86_64.whl  charset_normalizer-3.3.2-cp39-cp39-manylinux2014_x86_64.manylinux_2_17_x86_64.whl  cryptography-43.0.0-cp39-abi3-manylinux2014_x86_64.manylinux_2_17_x86_64.whl  cryptography-43.0.1-cp39-abi3-manylinux_2_28_x86_64.whl  cryptography-44.0.2-cp39-abi3-manylinux_2_28_x86_64.whl
